[package]
name = "rust-demo"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
futures ="0.3.5"
rocket = "0.4.5"
serde="1.0.115"
rocket_contrib= "0.4.5"
serde_json = "1.0.57"
serde_derive = "1.0.115"
